More spacing fixes

--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -85,7 +85,7 @@ a,a:visited {
 		border: none;
 		border-bottom: 1px solid #eee; 
 		position: relative;
-		padding-left: 50%; 
+		padding-left: 160px; 
 	}
 	
 	.table-responsive table td:before { 
